# slot_machine

./: .gitignore  CHANGELOG.md  README.md  setup.cfg
.github/workflows/: tests.yml
slot_machine/: __init__.py  samplers.py  serializers.py
tests/: test_samplers.py  test_serializers.py
tests/data/: parameters.yaml  parameters_stream.yaml
