[metadata]
name = slot_machine_serializers
version = 0.1.0
description = Ordered dataclass serializer mixin for sloted dataclasses
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown
url = https://github.com/sirno/slot_machine
license = MIT
python_requires = ">=3.10"

[options]
packages = find:
install_requires =
    pyyaml
    typing-extensions

[options.extras_require]
dev =
    pytest
    black
    tox

[tox:tox]
envlist =
    py310
    py311
isolated_build = True

[testenv]
deps =
    pytest
commands = pytest tests {posargs}
